feat(data-324): NETEX PARKING France profile validation v1.2
* Reject incoming NETEX PARKING XML import file if it does not respect v1.2 specifications
* Update NETEX PARKING ETALAB import to generate v1.2 PARKING ID
* Code refactoring